--- a/trunk/ressourcen/jd/languages/Spanish(Argentina).lng
+++ b/trunk/ressourcen/jd/languages/Spanish(Argentina).lng
@@ -82,9 +82,13 @@ downloadlink.status.incomplete = Incompleto
 downloadlink.status.waitinguserio = Esperando introducción del usuario
 exceptions.browserexception.alreadyexists = Archivo de salida ya existe
 exceptions.browserexception.badrequest = Solicitud incorrecta: %s(%s)
+exceptions.browserexception.chunkcopyerror.badrequest = Error de segmento inesperado
 exceptions.browserexception.couldnotrenam = No se pudo cambiar el nombre del archivo de salida
+exceptions.browserexception.rangeerror = Error de carga de segmento
+exceptions.browserexception.redirecterror = Error de segmento inesperado: Redirige
 gui.accountcheck.pluginerror = El plugin %s puede estar defectuoso. ¡Informe al soporte!
 gui.askname = ¿Cuál es su nombre?
+gui.btn_abort = Cancelar
 gui.btn_add = Agregar
 gui.btn_cancel = Cancelar
 gui.btn_cancelcountdown = Detener cuenta regresiva
@@ -171,7 +175,9 @@ gui.config.fengshui.rdmanual = Manual
 gui.config.fengshui.rdname = Detección de router
 gui.config.fengshui.settings = Configuración
 gui.config.fengshui.title = Configurar Feng Shui
+gui.config.general.changelog.auto = Abrir registro de cambios despues de actualizar
 gui.config.general.createsubfolders = Crear subcarpeta con el nombre del paquete (Si es posible)
+gui.config.general.createsubfoldersbefore = Crear sub-carpetas despues de agregar links
 gui.config.general.downloaddirectory = Directorio de descarga
 gui.config.general.filelogger = Crear archivo de eventos en el directorio ./logs/
 gui.config.general.loggerlevel = Logging level
@@ -190,6 +196,7 @@ gui.config.gui.custom_browser = Ruta del navegador
 gui.config.gui.custom_browser_param = Parámetro %url (un parámetro por linea)
 gui.config.gui.disabledialogs = Deshabilitar diálogos de afirmación
 gui.config.gui.disabletooltipps = Deshabilitar tooltips de la tabla de descargas
+gui.config.gui.doubeclick = Doble click para expandir/contraer paquetes
 gui.config.gui.ext = Avanzado
 gui.config.gui.language = Idioma
 gui.config.gui.languagefileinfo = Archivo de idioma actual: %s de %s en versión %s
@@ -197,6 +204,8 @@ gui.config.gui.linkgrabber.onlinecheck = Link Grabber: Estado del enlace (Dispon
 gui.config.gui.look.tab = Apariencia
 gui.config.gui.plaf = Estilo (Necesita reiniciar para aplicar)
 gui.config.gui.premiumconfigfilednum = ¿Cuántos campos de cuentas premium quieres mostrar (Es necesario reiniciar)
+gui.config.gui.reg_protocols = Asociar .ccf/.tlc/.rsdf con JDownloader
+gui.config.gui.show_speed_graph = Mostrar grafico de velocidad
 gui.config.gui.showsplash = Mostrar ventana de inicio al iniciar programa
 gui.config.gui.soundtheme = Temas de sonido
 gui.config.gui.testbrowser = Probar navegador
@@ -212,6 +221,7 @@ gui.config.jac.column.use = Uso
 gui.config.jac.status.auto = Detección automática
 gui.config.jac.status.noauto = Control manual
 gui.config.jdrr.close = Cerrar
+gui.config.jdrr.infolable = <span color=\"#4682B4\"> Comprueba la dirección IP del router y presiona Iniciar <br> W ventana del navegador se abre con la página de inicio del router <br> Reconecta después de que presionas detener y guardar. <br> Más información disponible </ span> <a href=\"http://jdownloader.org/knowledge/wiki/reconnect/reconnect-recorder\"> aquí </ a>
 gui.config.jdrr.popup.title = JDRRPopup
 gui.config.jdrr.reconnectfaild = Reconexión fallida
 gui.config.jdrr.savereconnect = Reconexión satisfactoria. ¿Guardar ahora?
@@ -231,8 +241,10 @@ gui.config.liveheader.selectrouter = Seleccionar Router
 gui.config.liveheader.user = Login
 gui.config.liveheader.waitforip = Espera una nueva IP (sec)
 gui.config.liveheader.waittimeforipcheck = Tiempo fuera para comprobación de primer IP (sec)
+gui.config.liveheader.warning.experimental = ¿Desea probar los metódos experimentales de re conexión de router?\r\n Por favor tome en cuenta que estos metódos pueden cambiar los ajustes de su router!
 gui.config.liveheader.warning.nocurlconvert = JD no puede convertir el script CURL. Por favor pregunta al equipo de soporte de JD
 gui.config.liveheader.warning.notfound = JDownloader no puede detectar tu configuración de router.
+gui.config.liveheader.warning.upnpinactive = Por favor active el soporte Upnp en la configuración de red del router. <br><a href=\"http://%s\">Ir a Router</a><br><a href=\"http://jdownloader.org/knowledge/wiki/reconnect/upnp\">Artículo Wiki: Upnp en Router</a><br>Da click en Aceptar cuando hayas activado el soporte Upnp en el router o Cancelar para saltarlo.
 gui.config.liveheader.warning.wizard = Las configuraciones de búsqueda pueden tomar un tiempo. Por favor introduce tus datos de acceso del router. ¿Ejecutar ahora?
 gui.config.liveheader.warning.wizard.checkall = Comprobar todos los routers (muy lento)
 gui.config.liveheader.warning.wizard.title = ¿Iniciar detección automática de router ahora?
@@ -263,10 +275,12 @@ gui.config.plugin.optional.statusactive = On
 gui.config.plugin.optional.statusinactive = Off
 gui.config.popup.title = Configuración
 gui.config.reconnect.name = Reconectar
+gui.config.reconnect.showupload = Mostrar ventana con la información subida de reconexión
 gui.config.reloadcontainer = Recargar contenedor de descarga
 gui.config.routeripfinder = Buscar-IP Router
 gui.config.routeripfinder.close = Cerrar ventana
 gui.config.routeripfinder.featchip = Detectando tu IP del router
+gui.config.routeripfinder.notfound = No se pudo encontrar la direccion del router
 gui.config.routeripfinder.ready = IP encontrada: %s
 gui.config.showcontaineronloadinfo = Mostrar información detallada del contenedor al cargar
 gui.config.showcontaineronloadinfo.helpurl = http://jdownloader.org/knowledge/wiki/start
@@ -331,6 +345,7 @@ gui.downloadlist.delete = ¿Eliminar enlaces seleccionados?
 gui.downloadlist.delete_downloadlinks = ¿Quitar descargas completadas?
 gui.downloadlist.delete_packages = ¿Quitar paquetes completados?
 gui.downloadlist.reset = ¿Resetear descargas seleccionadas? (Atención: Se eliminarán los archivos)
+gui.downloadlist.tooltip.connection = Segmento
 gui.downloadlist.tooltip.connections = Conecciones actuales:
 gui.downloadlist.tooltip.partnum = Partes:
 gui.downloadlist.tooltip.partsactive = Activo:
@@ -338,6 +353,7 @@ gui.downloadlist.tooltip.partsfailed = Incorrecto:
 gui.downloadlist.tooltip.partsfinished = Finalizado:
 gui.downloadlist.tooltip.simultan_downloads = Descargas máximas simultaneas:
 gui.droptarget.downloadsadded = Descargas agregadas:
+gui.droptarget.grabbed = Agregado:
 gui.droptarget.label = ¡Arrastre los enlaces aqui!
 gui.droptarget.title = Colector de enlace
 gui.fengshuiconfig.general.tooltip = <html>Aquí puedes determinar la ruta de Descarga e Idioma
@@ -410,10 +426,12 @@ gui.linkinfo.download.activated = esta activo
 gui.linkinfo.download.deactivated = esta desactivado
 gui.linkinfo.download.notunderway = no esta en proceso
 gui.linkinfo.download.underway = esta en proceso
+gui.linkinfo.downloadstatus = Estado de descarga
 gui.linkinfo.file = Archivo (File)
 gui.linkinfo.filesize = Tamaño del archivo
 gui.linkinfo.package = Paquete
 gui.linkinfo.password = Contraseña
+gui.linkinfo.pwdl = Contraseña para la decarga
 gui.linkinfo.rate = Tasa de renovación
 gui.linkinfo.saveto = Guardar en
 gui.linkinfo.speed = Velocidad
@@ -421,6 +439,7 @@ gui.linkinfo.title = Información del enlace:
 gui.linkinfo.waittime = Tiempo de espera
 gui.linklist.editpackagename.message = Nuevo nombre de paquete
 gui.linklist.newpackage.message = Nombre del nuevo paquete
+gui.linklist.setpw.message = Establecer contraseña de descarga
 gui.linklist.status.doresume = Espere reaudación
 gui.logdialog.btn_uploadlog = Subir Log
 gui.logdialog.loglink = Registro de enlace (Click en aceptar para abrir)
@@ -565,6 +584,7 @@ gui.menu.remove = Quitar
 gui.messages.outofmemoryerror = ¡Ocurrió un error!\r\nJDownloader esta fuera de memoria. Se recomienda reiniciar.\r\n¡Por favor reporta este error (bug)!
 gui.packageinfo.comment = Comentario
 gui.packageinfo.dldirectory = Directorio de descarga
+gui.packageinfo.extractafter = Extraer automaticamente
 gui.packageinfo.links = Enlaces
 gui.packageinfo.loaded = Cargado
 gui.packageinfo.name = Nombre
@@ -607,8 +627,10 @@ gui.table.contextmenu.info = Detalles
 gui.table.contextmenu.newpackage = Mover a nuevo paquete
 gui.table.contextmenu.packagesort = Clasificar paquetes
 gui.table.contextmenu.packagesubmenu = Paquete
+gui.table.contextmenu.priority = Prioridad
 gui.table.contextmenu.reset = Resetear
 gui.table.contextmenu.resume = Continuar
+gui.table.contextmenu.setdlpw = Establecer contraseña de descarga
 gui.table.draganddrop.after = Soltar después '%s'
 gui.table.draganddrop.before = Soltar antes '%s'
 gui.table.draganddrop.insertinpackageend = Insertar al inicio del paquete '%s'
@@ -652,6 +674,7 @@ init.webupdate.progress.0_title = Actualización Web
 init.webupdate.progress.1_title = Comprobar actualizaciones
 installer.abortinstallation = Error. Instalación abortada
 installer.error.nowriterights = Error. No tienes permisos para escribir en el directorio
+installer.refused = La conexiónfallo. Parece que cualquier software de seguridad (por ejemplo, firewall) bloquea JD. Ver http://jdownloader.org/knowledge/wiki/faq.
 installer.welcome = Bienvenido a JDownloader. El programa de instalación descargar algunos archivos.
 interaction.batchreconnect.batch = Lote de Script
 interaction.batchreconnect.dooutput = Crear archivo de registro
@@ -832,7 +855,10 @@ plugins.decrypt.serienjunkies.usepremiumlinks = usar enlaces premium si es posib
 plugins.decrypt.speedysharecom.password = Introduzca la contraseña:
 plugins.decrypt.stealthto.captcha = Por favor de click sobre el circulo con un hueco
 plugins.error.downloadfailed = Descarga fallada
+plugins.errors.disconnect = ¿Desconectado?
 plugins.errors.error = Error: 
+plugins.errors.hosteroffline = ¿Servidor offline?
+plugins.errors.nointernetconn = ¿Sin conexion a internet?
 plugins.errors.pluginerror = Error de plugn. Notifique al soporte
 plugins.errors.uploadedto.premiumtrafficreached = Limite te tráfico alcanzado
 plugins.errors.wrongpassword = Contraseña incorrecta
@@ -840,6 +866,7 @@ plugins.host.dosyakaydet.breakcaptcha = Esperando el OCR
 plugins.host.enterlinkpassword = Por favor introduzca la contraseña del enlace
 plugins.host.fastload.browsererror = No se pudo abrir el enlace en el explorador
 plugins.host.fastload.errors = Lanzador del navegador configuración perdida
+plugins.host.fastload.info = Es la primera vez que intentas descargar de fast-load.net.\r\nEste plugin es especial: Para descargar necesitas introducir un captcha en el navegador.\r\njD abrira una URL de Información.
 plugins.host.fastload.prepare = Espere la confirmación del enlace
 plugins.host.gigasize.freeaccount.pass = Contraseña
 plugins.host.gigasize.freeaccount.use = Usar cuenta gratis
@@ -847,6 +874,7 @@ plugins.host.gigasize.freeaccount.user = Email
 plugins.host.meinupload.serverdefect = Servicio no disponible
 plugins.host.premium.info.cash = Dinero
 plugins.host.premium.info.error = El plugin &s aún no acepta la caracteristica de Información de cuenta
+plugins.host.premium.info.expired = ¡La cuenta para '%s' ha caducado! ¡Por favor extienda la cuenta o compre una nueva!\r\n%s
 plugins.host.premium.info.files = Archivos (Files)
 plugins.host.premium.info.notvalid = ¡La cuenta para '%s' no es valida!. ¡Por favor verifica el nombre de usuario y la contraseña!\r\n%s
 plugins.host.premium.info.premiumpoints = Puntos Premium
@@ -857,17 +885,22 @@ plugins.host.premium.info.trafficshareleft = Trafico Compartido restante
 plugins.host.premium.info.usedspace = Espacio usado
 plugins.host.premium.info.validuntil = Valido hasta
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Sesión de descarga expirada. Intente de nuevo.
+plugins.host.rapidshare.errors.15fb70be386bb33e91b8e31b3b94c021 = Archivo no encontrado. Por favor, compruebe su link de descarga.
 plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Archivo no encontrado. Por favor verifica tu enlace de descarga.
+plugins.host.rapidshare.errors.6b973d801c521a179cc63a4b830314d3 = Violacion a la TOC. Archivo removido por rapidshare.
 plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = El sevidor, el archivo esta almacenado en el, pero no esta en línea. Intente de nuevo más tarde
 plugins.host.rapidshare.errors.8da4051e59062d67a39a7e10cc026831 = Has alcanzado tu límite por hoy.
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Parece ser que el archivo es ilegal y esta bloqueado. RapidShare prohibe la descarga de este archivo.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = Límite de 10GB alcanzado
+plugins.host.rapidshare.speedtest = Prueba de velocidad
+plugins.host.rapidshare.speedtest.link = Ingresas link de Rapidshare.com
 plugins.host.server.unavailable = Error en el servidor
 plugins.host.sharebaseto.servererror = Servicio no disponible 
 plugins.host.xup = Contraseña incorrecta
 plugins.hoster.error.agb = TOC no firmadas
 plugins.hoster.fastload.bypassapi = API de Bypass
 plugins.hoster.general.passwordprotectedinput = Enlaces protegidos: Introduzca la contraseña:
+plugins.hoster.letitbitnet.errors.countryblock = Letitbit prohibe la descarga de este archivo en su país
 plugins.hoster.passquestion = Enlace '%s' protegido. Introduzca la contraseña:
 plugins.hoster.premium.status_ok = Cuenta aceptada
 plugins.hoster.premiumtab = Ajustes Premium
@@ -879,6 +912,8 @@ plugins.hoster.rapidshare.com.prefferedserver.random = Aleatorio
 plugins.hoster.rapidshare.com.preselection = Aceptar pre selección (*2)
 plugins.hoster.rapidshare.com.telekom = Usar servidor Telekom si esta disponible*
 plugins.hoster.uploadedto.chunks = # Conexiónes Premium  (>1 causa mayor trafico)
+plugins.hoster.uploaderpl.accountexpired = Cuenta caducada
+plugins.hoster.uploaderpl.freememberacc = Cuenta de usuario registrado gratuitamente
 plugins.menu.accounts = Cuentas
 plugins.menu.configs = Configuración
 plugins.menu.enable_premium = Habilitar cuenta
@@ -1034,6 +1069,7 @@ plugins.optional.langfileeditor.svn = SVN
 plugins.optional.langfileeditor.svn.access.anonymous = SVN CheckOut anonimo
 plugins.optional.langfileeditor.svn.access.pass = Contraseña del SVN
 plugins.optional.langfileeditor.svn.access.user = Nombre de usuario del SVN
+plugins.optional.langfileeditor.svn.change.message = Cambiar el codigo actual para el control repositorio SVN?
 plugins.optional.langfileeditor.svn.change.title = ¿Cambiar ahora?
 plugins.optional.langfileeditor.svn.checkout = CheckOut SVN ahora (Esto puede tardar unos segundos ...)
 plugins.optional.langfileeditor.svn.checkoutonstart = CheckOut SVN al iniciar
@@ -1073,6 +1109,7 @@ plugins.optional.premiumcollector.fetchaccounts = Traer cuentas
 plugins.optional.premiumcollector.inserted = %s Cuentas insertadas satisfactoriamente
 plugins.optional.premiumcollector.name = PremiumCollector
 plugins.optional.premiumcollector.onlyvalid = Aceptar solo cuentas validas y que no hayan expirado
+plugins.optional.premiumcollector.onlyvalid2 = Remover cuentas invalidas y caducadas
 plugins.optional.premiumcollector.overwrite = Sobrescribir automáticamente las cuentas
 plugins.optional.premiumcollector.password = Contraseña
 plugins.optional.premiumcollector.username = Nombre de usuario
@@ -1148,6 +1185,7 @@ plugins.trayicon.popup.menu.toggleclipboard = Habilitar/Deshabilitar monitoreo d
 plugins.trayicon.popup.menu.togglereconnect = Habilitar/Deshabilitar re conexión
 plugins.trayicon.popup.menu.update = Ejecutar actualización
 plugins.trayicon.popup.title = JDownloader
+routerinfocollector.dialog.msg = <b>¡Para mejorar la detección y re conexión automática de router, recolectamos la información del router!</b><br>Si estas de acuerdo en subir los detalles obtenidos de tu router por favor confirma con un ¡SI!!
 routerinfocollector.dialog.title = Por favor, ayúdenos a mejorar la deteccion automatica del router.
 showcaptcha.choose.file = Selecciona un archivo de imagen
 showcaptcha.chooser.title = JDownloader :: mostrar Captcha
